# smart-string

./: .gitignore  .rustfmt.toml  API-PARITY.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: display_ext.rs  lib.rs  pascal_string.rs  smart_string.rs
src/display_ext/: README.md  mod.rs
src/pascal_string/: README.md  error.rs  mod.rs  with_serde.rs
src/smart_string/: mod.rs  with_serde.rs
src/str_stack/: iter.rs  mod.rs  with_serde.rs
